# ToDo_List_CLI

./: pyproject.toml  to_add.txt  todo.json
todo/: cli.py  editor.py  main.py  models.py  utils.py
todo/modules/: cli.py  editor.py  models.py  utils.py
todo_app.egg-info/: PKG-INFO  SOURCES.txt
